# lidar-scan

./: .dockerignore  docker-compose.yml  pyproject.toml
.agents/skills/testing-lidar-cockpit/: SKILL.md
.github/workflows/: docker-publish.yml
app/core/: config.py
docker/: Dockerfile
web/src/app/features/settings/: settings.component.ts
